mesh integration changes.  Mesh network needs to be created before other ROS nodes

--- a/system/agent_protocol_splitter.service
+++ b/system/agent_protocol_splitter.service
@@ -1,6 +1,7 @@
 [Unit]
 Description="RTSP/Mavlink protocol splitter bring-up"
-After=network.target
+Requires=mesh.service
+After=mesh.service
 
 [Service]
 Type=simple
