agent_protocol_splitter and mavlink-router changes removed

--- a/system/agent_protocol_splitter.service
+++ b/system/agent_protocol_splitter.service
@@ -1,7 +1,6 @@
 [Unit]
 Description="RTSP/Mavlink protocol splitter bring-up"
-Requires=mesh.service
-After=mesh.service
+After=network.target
 
 [Service]
 Type=simple
