--- a/system/micrortps_agent.service
+++ b/system/micrortps_agent.service
@@ -7,7 +7,7 @@ After=mesh-init.service
 Type=simple
 User=sad
 Group=sad
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; micrortps_agent -t UDP -r 2020 -s 2019 -n $DRONE_DEVICE_ID"
+ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; micrortps_agent -t UDP -r 2020 -s 2019 -n $DRONE_DEVICE_ID -a 127.0.0.1"
 Restart=on-failure
 RestartSec=1s
 
