--- a/system/mocap_pose.service
+++ b/system/mocap_pose.service
@@ -9,7 +9,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch mocap_pose mocap_pose.launch"
+ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch mocap_pose mocap_pose.launch address:=172.18.32.20"
 
 [Install]
 WantedBy=multi-user.target
