--- a/system/navigation.service
+++ b/system/navigation.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Octomap and Navigation
-Requires=mesh.service
-After=mesh.service
+Requires=mesh.service rplidar.service
+After=mesh.service rplidar.service
 
 [Service]
 Type=simple
@@ -12,6 +12,7 @@ RestartSec=2
 ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch navigation octomap_and_navigation.py"
 Restart=on-failure
 RestartSec=1s
+KillSignal=SIGINT
 
 [Install]
 WantedBy=multi-user.target
