--- a/system/control_interface.service
+++ b/system/control_interface.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Control Interface
-Requires=mesh.service rplidar.service navigation.service
-After=mesh.service rplidar.service navigation.service
+Requires=mesh.service
+After=mesh.service
 
 [Service]
 Type=simple
@@ -10,8 +10,6 @@ Group=sad
 Restart=always
 RestartSec=2
 ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch control_interface control_interface.py"
-Restart=on-failure
-RestartSec=1s
 KillSignal=SIGINT
 
 [Install]
