Remove mesh start dependency

--- a/system/control_interface.service
+++ b/system/control_interface.service
@@ -1,14 +1,12 @@
 [Unit]
 Description=Control Interface
-Requires=mesh.service
-After=mesh.service
 
 [Service]
 Type=simple
 User=sad
 Group=sad
 Restart=always
-RestartSec=2
+RestartSec=2s
 ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch control_interface control_interface.py"
 KillSignal=SIGINT
 
