--- a/system/navigation.service
+++ b/system/navigation.service
@@ -1,14 +1,12 @@
 [Unit]
 Description=Octomap and Navigation
-Requires=mesh.service
-After=mesh.service
 
 [Service]
 Type=simple
 User=sad
 Group=sad
 Restart=always
-RestartSec=2
+RestartSec=2s
 ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch navigation octomap_and_navigation.py"
 KillSignal=SIGINT
 
