--- a/system/rplidar.service
+++ b/system/rplidar.service
@@ -1,14 +1,12 @@
 [Unit]
 Description=RP Lidar Service
-Requires=mesh.service
-After=mesh.service
 
 [Service]
 Type=simple
 User=sad
 Group=sad
 Restart=always
-RestartSec=2
+RestartSec=2s
 ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch rplidar_ros2 sensors_launch.py"
 
 [Install]
