--- a/system/octomap_server2.service
+++ b/system/octomap_server2.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Navigation
+Description=Octomap
 
 [Service]
 Type=simple
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2s
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch navigation navigation.py"
+ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch octomap_server2 octomap_server.py"
 KillSignal=SIGINT
 
 [Install]
