Provisioning tool will quit if device is provisioned
Provisioning is needed only once so the tool does not need to run
in background if there is nothing to do.

--- a/system/provisioning-agent.service
+++ b/system/provisioning-agent.service
@@ -8,7 +8,7 @@ Type=simple
 User=sad
 Group=sad
 WorkingDirectory=~
-Restart=always
+Restart=no
 RestartSec=2
 ExecStart=/bin/sh -c "/usr/bin/provisioning-agent"
 
