--- a/system/bumper.service
+++ b/system/bumper.service
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2s
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch fog_bumper bumper_launch.py"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch fog_bumper bumper_launch.py"
 KillSignal=SIGINT
 
 [Install]
