--- a/system/mocap_pose.service
+++ b/system/mocap_pose.service
@@ -9,7 +9,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch mocap_pose mocap_pose.launch address:=$INDOOR_SERVER_IP_ADDRESS lat:=$INDOOR_ORIGO_LATITUDE lon:=$INDOOR_ORIGO_LONGITUDE alt:=$INDOOR_ORIGO_ALTITUDE"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch mocap_pose mocap_pose.launch address:=$INDOOR_SERVER_IP_ADDRESS lat:=$INDOOR_ORIGO_LATITUDE lon:=$INDOOR_ORIGO_LONGITUDE alt:=$INDOOR_ORIGO_ALTITUDE"
 
 [Install]
 WantedBy=multi-user.target
