--- a/system/navigation.service
+++ b/system/navigation.service
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2s
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch navigation navigation.py"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch navigation navigation.py"
 KillSignal=SIGINT
 
 [Install]
