--- a/system/px4_mavlink_ctrl.service
+++ b/system/px4_mavlink_ctrl.service
@@ -7,7 +7,7 @@ After=mesh.service
 Type=simple
 User=sad
 Group=sad
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch px4_mavlink_ctrl mavlink_ctrl.launch"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch px4_mavlink_ctrl mavlink_ctrl.launch"
 
 [Install]
 WantedBy=multi-user.target
