--- a/system/update_agent.service
+++ b/system/update_agent.service
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; /opt/ros/foxy/bin/update-agent --ros-args --remap __ns:=/$DRONE_DEVICE_ID"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; /opt/ros/galactic/bin/update-agent --ros-args --remap __ns:=/$DRONE_DEVICE_ID"
 
 [Install]
 WantedBy=multi-user.target
