--- a/vm-comms/system/mission_engine.service
+++ b/vm-comms/system/mission_engine.service
@@ -11,7 +11,7 @@ WorkingDirectory=~
 Restart=always
 RestartSec=2
 EnvironmentFile=/enclave/drone_device_id
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; /usr/bin/mission-engine -device_id $DRONE_DEVICE_ID"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; /usr/bin/mission-engine -device_id $DRONE_DEVICE_ID"
 
 [Install]
 WantedBy=multi-user.target
