--- a/vm-main/system/indoor_pos.service
+++ b/vm-main/system/indoor_pos.service
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2
-ExecStart=/bin/sh -c ". /opt/ros/foxy/setup_fog.sh; ros2 launch indoor_pos indoor_pos.launch"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch indoor_pos indoor_pos.launch"
 
 [Install]
 WantedBy=multi-user.target
