Move to galactic

--- a/system/odometry2.service
+++ b/system/odometry2.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Bumper
+Description=Odometry2
 
 [Service]
 Type=simple
@@ -7,7 +7,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=2s
-ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch fog_bumper bumper_launch.py"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; ros2 launch odometry2 odometry.py"
 KillSignal=SIGINT
 
 [Install]
