Mission data recorder uses two dashes for long parameter flags

--- a/vm-main/system/mission-data-recorder.service
+++ b/vm-main/system/mission-data-recorder.service
@@ -13,12 +13,9 @@ RestartSec=2
 EnvironmentFile=/enclave/drone_device_id
 ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; if [ ! -e /tmp/mission-data ]; then mkdir /tmp/mission-data; fi; \
     /usr/bin/mission-data-recorder \
-        -device-id \"$DRONE_DEVICE_ID\" \
-        -backend-url \"$MISSION_DATA_RECORDER_BACKEND_URL\" \
-        -size-threshold \"$MISSION_DATA_RECORDER_SIZE_THRESHOLD\" \
-        -topics \"$MISSION_DATA_RECORDER_TOPICS\" \
-        -dest-dir /tmp/mission-data \
-        -extra-args \"--qos-profile-overrides-path,$MISSION_DATA_RECORDER_QOS_OVERRIDES\""
+        --device-id \"$DRONE_DEVICE_ID\" \
+        --dest-dir /tmp/mission-data \
+        --extra-args \"--qos-profile-overrides-path,$MISSION_DATA_RECORDER_QOS_OVERRIDES\""
 
 [Install]
 WantedBy=multi-user.target
