--- a/system/depthai_gstreamer_node.service
+++ b/system/depthai_gstreamer_node.service
@@ -9,7 +9,7 @@ User=sad
 Group=sad
 Restart=always
 RestartSec=10
-ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog.sh; /opt/ros/galactic/lib/depthai_ctrl/gstreamer_node --ros-args --remap __ns:=/$DRONE_DEVICE_ID -p address:=$RTSP_SERVER_ADDRESS/$DRONE_DEVICE_ID"
+ExecStart=/bin/sh -c ". /opt/ros/galactic/setup_fog_sec.sh; ROS_DOMAIN_ID=1 /opt/ros/galactic/lib/depthai_ctrl/gstreamer_node --ros-args --remap __ns:=/$DRONE_DEVICE_ID -p address:=$RTSP_SERVER_ADDRESS/$DRONE_DEVICE_ID --enclave /fog/depthai_gst"
 
 [Install]
 WantedBy=multi-user.target
